<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geographiclib_ros2</name>
  <version>0.2.3</version>
	<description>ROS2 wrapper for GeographicLib
	Original library: https://github.com/geographiclib/geographiclib </description>
  <maintainer email="agr.saurav1@gmail.com">Saurav Agarwal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
